--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
       <div class="buttons">
       <%#= link_to "Login", cars_path, class: "btn btn-secondary" if !user_signed_in? %>
       <div class="mb-3">
-      <%= link_to "Browse The Cars", cars_path, class: "btn btn-secondary" %>
+      <%= link_to "Find your dream car", cars_path, class: "btn btn-secondary" %>
       </div>
       <%# <div>
       <%= link_to "Rent your car", new_car_path, class: "btn btn-secondary" %>
@@ -21,26 +21,47 @@
 
 
   <div class="grid-container">
-      <div class="grid-item">
-        <img src="https://res.cloudinary.com/dfwstcrkv/image/upload/v1719319753/Lamborghini-Logo.svg_ypxvew.png" alt="Lamborghini">
+
+      <div class="card d-flex justify-content-center align-items-center bg-dark bg-grandient">
+        <div class="grid-item">
+          <img src="https://res.cloudinary.com/dfwstcrkv/image/upload/v1719319753/Lamborghini-Logo.svg_ypxvew.png" alt="Lamborghini">
+        </div>
       </div>
-      <div class="grid-item">
-        <img src="https://res.cloudinary.com/dfwstcrkv/image/upload/v1719325123/porsche-logo-16_kmagzy.png" alt="Porsche">
+
+      <div class="card d-flex justify-content-center align-items-center bg-dark bg-grandient">
+        <div class="grid-item">
+          <img src="https://res.cloudinary.com/dfwstcrkv/image/upload/v1719325123/porsche-logo-16_kmagzy.png" alt="Porsche">
+        </div>
       </div>
-      <div class="grid-item">
-        <img src="https://res.cloudinary.com/dfwstcrkv/image/upload/v1719319918/Logo-Pagani_rbklyq.png" alt="Pagani">
+
+      <div class="card d-flex justify-content-center align-items-center bg-dark bg-grandient">
+        <div class="grid-item">
+          <img src="https://res.cloudinary.com/dfwstcrkv/image/upload/v1719319918/Logo-Pagani_rbklyq.png" alt="Pagani">
+        </div>
       </div>
-      <div class="grid-item">
-        <img src="https://res.cloudinary.com/dfwstcrkv/image/upload/v1719325653/pngwing.com_q2piji.png" alt="Koenigsegg">
+
+      <div class="card d-flex justify-content-center align-items-center bg-dark bg-grandient">
+        <div class="grid-item">
+          <img src="https://res.cloudinary.com/dfwstcrkv/image/upload/v1719325653/pngwing.com_q2piji.png" alt="Koenigsegg">
+        </div>
       </div>
-      <div class="grid-item">
-        <img src="https://res.cloudinary.com/dfwstcrkv/image/upload/v1719323979/Rolls-Royce-logo_vjzmeo.png" alt="Rolls-Royce">
+
+      <div class="card d-flex justify-content-center align-items-center bg-dark bg-grandient">
+        <div class="grid-item">
+          <img src="https://res.cloudinary.com/dfwstcrkv/image/upload/v1719323979/Rolls-Royce-logo_vjzmeo.png" alt="Rolls-Royce">
+        </div>
       </div>
-      <div class="grid-item">
-        <img src="https://res.cloudinary.com/dfwstcrkv/image/upload/v1719325932/pngegg-2_gn0xdu.png" alt="Maserati">
+
+      <div class="card d-flex justify-content-center align-items-center">
+        <div class="grid-item">
+          <img src="https://res.cloudinary.com/dfwstcrkv/image/upload/v1719325932/pngegg-2_gn0xdu.png" alt="Maserati">
+        </div>
       </div>
-      <div class="grid-item">
-        <img src="https://res.cloudinary.com/dfwstcrkv/image/upload/v1719326106/ferrari-2_uuz9j9.png" alt="Ferrari">
+
+      <div class="card d-flex justify-content-center align-items-center bg-dark bg-grandient">
+        <div class="grid-item">
+          <img src="https://res.cloudinary.com/dfwstcrkv/image/upload/v1719326106/ferrari-2_uuz9j9.png" alt="Ferrari">
+        </div>
       </div>
   </div>
 </body>
