--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,23 +1,23 @@
-<h1 class="text-center text-light mb-1 mt-1">My Bookings</h1>
+<h1 class="text-center text-light mb-4 mt-3">My Bookings</h1>
 
-<div class="container d-flex" style="min-width: 80vw;">
-  <div class="row justify-content-center">
-    <div class="col-md-8">
+<div class="container" style="min-width: 80vw;">
+  <div class="row">
+    <div class="col d-flex justify-content-center table-responsive">
 
-      <table class="table opacity-75">
+      <table class="table table-secondary table-striped table-hover align-middle opacity-75 mt-3">
         <thead>
           <tr>
-            <th>ID</th>
-            <th>Car</th>
-            <th>Start Date</th>
-            <th>End Date</th>
-            <th>Status</th>
-            <th>Actions</th>
+            <th scope="col">ID</th>
+            <th scope="col">Car</th>
+            <th scope="col">Start Date</th>
+            <th scope="col">End Date</th>
+            <th scope="col">Status</th>
+            <th scope="col">Actions</th>
           </tr>
         </thead>
-        <tbody>
+        <tbody class="table-group-divider">
           <% @bookings.each do |booking| %>
-            <tr>
+            <tr scope="row">
               <td><%= booking.id %></td>
               <td><%= booking.car.name %></td>
               <td><%= booking.start_date %></td>
