--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -11,6 +11,7 @@
               </p>
             </div>
             <h2 class="card-car-pricing"><%= @car.price %> <i class="fa-solid fa-euro-sign"></i>/day</h2>
+            <br>
             <h4 id="car-address" class="car-address">
               <strong><i class="fas fa-map-pin"></i> </strong><%= @car.address %>
             </h4>
@@ -42,4 +43,7 @@
     </div>
 
   </div>
+</div>
+<div class="logo d-flex">
+  <img src="https://res.cloudinary.com/dfwstcrkv/image/upload/v1719307291/Logo_GC_nz4m2q.webp" alt="Gran Cars">
 </div>
