Add logo-footer in all pages

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background-color: #f8f9fa;
+  background-color:#1f242d;
   background-repeat: no-repeat;
   padding: 5px 0;
   text-align: center;
