--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,12 @@
     <% end %>
     <%#= render "shared/flashes" %>
     <%= yield %>
-
+    <div class="text-center">
+      <div class="logo d-flex">
+        <img src="https://res.cloudinary.com/dfwstcrkv/image/upload/v1719307291/Logo_GC_nz4m2q.webp" alt="Gran Cars">
+      </div>
+      <p>® Gran Cars</p>
+    </div>
     <%#= render "shared/footer" %>
   </body>
 </html>
