--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -43,7 +43,7 @@
     </div>
   </div>
     <br>
-    <div class="text-center">
+    <!--<div class="text-center">
       <p>® Gran Cars</p>
-    </div>
+    </div>-->
 </body>
