--- a/app/assets/stylesheets/pages/_show-car.scss
+++ b/app/assets/stylesheets/pages/_show-car.scss
@@ -61,9 +61,9 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 30vh;
+  height: 20vh;
 }
 .d-flex img {
-  max-width: 200px;
-  width: 100%;
+  margin-bottom: 20px;
+  max-width: 70px;
 }
