Modif logo index booking

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -34,6 +34,6 @@
       <%#= link_to 'New Booking', new_car_booking_path(@car), class: 'btn btn-success' %>
 
 </div>
-<div class="logo d-flex logo-booking">
+<!--<div class="logo d-flex logo-booking">
   <img src="https://res.cloudinary.com/dfwstcrkv/image/upload/v1719307291/Logo_GC_nz4m2q.webp" alt="Gran Cars">
-</div>
+</div>-->
