--- a/app/assets/stylesheets/pages/_booking-show.scss
+++ b/app/assets/stylesheets/pages/_booking-show.scss
@@ -57,7 +57,7 @@ body {
 
 .booking-price {
   font-weight: bold;
-  color: #007bff;
+  color: #ffff;
 }
 
 .booking-date {
@@ -65,11 +65,13 @@ body {
 }
 
 .actions {
-  text-align: right;
+  text-align: center;
+  margin-top: 20px;
 }
 
 .actions .btn {
   margin-left: 10px;
+  margin-top: 20px;
 }
 
 .terms {
